fixed page overflow (editor)

--- a/css/p5.canvas.css
+++ b/css/p5.canvas.css
@@ -11,6 +11,10 @@
 
 /* background / fb canvas */
 #defaultCanvas1 {
+    position: absolute !important;
+    /* solution to the overflowing browser page */
+    top: 0%;
+    left: 0%;
+
     visibility: hidden;
-    position: absolute;
 }
